# keyed-vals

./: .envrc  ChangeLog.md  README.md  cabal.project  default.nix
.github/workflows/: ci.yml
dict-handle/: ChangeLog.md  README.md  dict-handle.cabal
dict-handle/src/Dict/: Handle.hs
dict-handle/src/Dict/Handle/: Internal.hs
keyed-vals/: ChangeLog.md  README.md  keyed-vals.cabal
keyed-vals-hspec-tests/: ChangeLog.md  keyed-vals-hspec-tests.cabal
keyed-vals-hspec-tests/test/Test/KeyedVals/: CheckTypedHandle.hs  Hspec.hs  Types.hs
keyed-vals-mem/: ChangeLog.md  README.md  keyed-vals-mem.cabal
keyed-vals-redis/: .ghci  ChangeLog.md  README.md  keyed-vals-redis.cabal
keyed-vals-redis/test/: Spec.hs
keyed-vals/src/KeyedVals/: Handle.hs
keyed-vals/src/KeyedVals/Handle/: Aeson.hs  Catalog.hs  Codec.hs  Internal.hs  Typed.hs
keyed-vals/src/KeyedVals/Handle/Codec/: Aeson.hs  HttpApiData.hs
