cabal-version:      3.0
name:               keyed-vals-redis
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         adetokunbo@emio.la
author:             Tim Emiola
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.4 || ==9.4.1
homepage:           https://github.com/adetokunbo/keyed-vals#readme
bug-reports:        https://github.com/adetokunbo/keyed-vals/issues
synopsis:
  Access Redis using keyed-vals __Handle__

description:
  [keyed-vals](https://hackage.haskell.org/package/keyed-vals) aims
  to provide a 'narrow' client of [Redis](https://redis.io).

  I.e, __Redis__ supports many features; the abstract __Handle__ declared in
  `keyed-vals` just supports operations that access collections of values stored
  by keys (aka: 'dict', 'map', hash', 'object' and even 'context')

  This package provides a concrete implementation of the abstract __Handle__
  that actually uses Redis.

category:           Data, Redis
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/adetokunbo/keyed-vals.git

library
  exposed-modules:  KeyedVals.Handle.Redis
  other-modules:    KeyedVals.Handle.Redis.Internal
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-uni-patterns -fwarn-tabs
  build-depends:
    , base           >=4.11     && <5.0
    , bytestring     >=0.10.8.2 && <0.11 || >=0.11.3.1 && <0.12
    , containers     >=0.6.5    && <0.7
    , hedis          >= 0.15.1  && < 0.16
    , keyed-vals     >=0.1      && <0.2
    , read-env-var   >= 1.0.0   && < 1.1
    , text           >=1.2.4    && <1.3  || >=2.0
    , unliftio       >=0.2.22   && <0.3
    , unliftio-core  >=0.2.0    && <0.3